--- a/app/src/main/res/layout/main__activity.xml
+++ b/app/src/main/res/layout/main__activity.xml
@@ -58,7 +58,12 @@
             android:layout_above="@+id/bottom_navigation_bar"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_margin="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="170dp"
+            android:layout_marginRight="16dp"
+            android:layout_marginBottom="16dp"
             android:contentDescription="@string/create_new_file_or_folder"
             android:src="@drawable/ic_add_white_24dp"
             tools:elevation="2dp"
