add feature of full screen

--- a/app/src/main/res/menu/document__edit__menu.xml
+++ b/app/src/main/res/menu/document__edit__menu.xml
@@ -230,6 +230,11 @@
                 android:title="Speed Read"
                 tools:ignore="HardcodedText" />
             <item
+                android:id="@+id/action_full_screen"
+                android:icon="@drawable/ic_fullscreen_24dp"
+                android:title="Full Screen"
+                tools:ignore="HardcodedText" />
+            <item
                 android:id="@+id/action_send_debug_log"
                 android:icon="@drawable/ic_bug_report_black_24dp"
                 android:title="@string/send_debug_log"
