Markor AppCompat -> AndroidX migration, by @gsantner

--- a/app/src/main/res/layout/action_order_activity.xml
+++ b/app/src/main/res/layout/action_order_activity.xml
@@ -7,13 +7,13 @@
     android:orientation="vertical"
     tools:context=".activity.ActionOrderActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.Unified">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -21,11 +21,11 @@
             android:theme="@style/LightTextToolbarOverlay"
             app:title="@string/action_order">
 
-        </android.support.v7.widget.Toolbar>
+        </androidx.appcompat.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/action_order_activity_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
