--- a/app/src/main/res/layout/opoc_filesystem_fragment.xml
+++ b/app/src/main/res/layout/opoc_filesystem_fragment.xml
@@ -30,18 +30,18 @@
         android:visibility="gone"
         tools:ignore="HardcodedText" />
 
-    <android.support.v4.widget.SwipeRefreshLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/pull_to_refresh"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v7.widget.RecyclerView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/ui__filesystem_dialog__list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:minHeight="100dp"
-            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
-    </android.support.v4.widget.SwipeRefreshLayout>
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
 </FrameLayout>
