--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -39,7 +39,7 @@
         </PreferenceCategory>
 
         <PreferenceCategory android:title="@string/miscellaneous">
-            <android.support.v7.preference.EditTextPreference
+            <androidx.preference.EditTextPreference
                 android:defaultValue="@string/empty_string"
                 android:dialogMessage="@string/always_open_files_with_this_app_when_list_contains_file_extension"
                 android:icon="@drawable/ic_open_in_browser_black_24dp"
@@ -82,7 +82,7 @@
                 android:key="@string/pref_key__max_search_depth"
                 android:summary="%1$s"
                 android:title="@string/max_search_depth" />
-            <android.support.v7.preference.EditTextPreference
+            <androidx.preference.EditTextPreference
                 android:defaultValue=""
                 android:dialogMessage="@string/do_not_search_specified_files_and_folders"
                 android:icon="@drawable/ic_baseline_rule_folder_24"
@@ -154,7 +154,7 @@
                 android:key="@string/pref_key__is_disallow_screenshots"
                 android:title="@string/disallow_screenshots" />
 
-            <android.support.v7.preference.EditTextPreference
+            <androidx.preference.EditTextPreference
                 android:defaultValue="\\n----\\n"
                 android:dialogMessage="@string/share_into_format_prefix_for_text_shared"
                 android:icon="@drawable/ic_share_black_24dp"
@@ -169,7 +169,7 @@
         </PreferenceCategory>
 
         <PreferenceCategory android:title="@string/editor">
-            <android.support.v7.preference.SeekBarPreference
+            <androidx.preference.SeekBarPreference
                 android:defaultValue="8"
                 android:icon="@drawable/ic_space_bar_black_24dp"
                 android:key="@string/pref_key__editor_textaction_bar_item_padding"
@@ -244,7 +244,7 @@
         </PreferenceCategory>
 
         <PreferenceCategory android:title="@string/file_browser">
-            <android.support.v7.preference.EditTextPreference
+            <androidx.preference.EditTextPreference
                 android:defaultValue="@string/empty_string"
                 android:dialogMessage="@string/file_description_format_dialog"
                 android:icon="@android:drawable/ic_menu_info_details"
@@ -277,7 +277,7 @@
             android:icon="@drawable/ic_format_shapes_black_24dp"
             android:key="@string/pref_key__font_family"
             android:title="@string/font" />
-        <android.support.v7.preference.SeekBarPreference
+        <androidx.preference.SeekBarPreference
             android:defaultValue="15"
             android:icon="@drawable/ic_format_size_black_24dp"
             android:key="@string/pref_key__editor_font_size"
@@ -286,7 +286,7 @@
             android:summary="@string/control_font_size_in_editor"
             android:title="@string/font_size" />
 
-        <android.support.v7.preference.SeekBarPreference
+        <androidx.preference.SeekBarPreference
             android:defaultValue="1"
             android:icon="@drawable/ic_keyboard_tab_black_24dp"
             android:key="@string/pref_key__tab_width_v2"
@@ -322,7 +322,7 @@
         </PreferenceCategory>
 
         <PreferenceCategory android:title="@string/miscellaneous">
-            <android.support.v7.preference.SeekBarPreference
+            <androidx.preference.SeekBarPreference
                 android:defaultValue="100"
                 android:icon="@drawable/ic_format_line_spacing_black_24dp"
                 android:key="@string/pref_key__editor_line_spacing"
@@ -380,13 +380,13 @@
             android:title="@string/swipe_to_change_mode" />
 
         <PreferenceCategory android:title="@string/inject">
-            <android.support.v7.preference.EditTextPreference
+            <androidx.preference.EditTextPreference
                 android:defaultValue="@string/inject_to_head_default"
                 android:icon="@drawable/ic_add_white_24dp"
                 android:key="@string/pref_key__inject_to_head"
                 android:summary="@string/js_css"
                 android:title="@string/inject_to_head" />
-            <android.support.v7.preference.EditTextPreference
+            <androidx.preference.EditTextPreference
                 android:defaultValue="@string/empty_string"
                 android:icon="@drawable/ic_add_white_24dp"
                 android:key="@string/pref_key__inject_to_body"
@@ -405,7 +405,7 @@
                 android:key="@string/pref_key__is_render_rtl"
                 android:summary="@string/render_rtl_language"
                 android:title="@string/rtl_rendering" />
-            <android.support.v7.preference.SeekBarPreference
+            <androidx.preference.SeekBarPreference
                 android:defaultValue="-1"
                 android:icon="@drawable/ic_format_size_black_24dp"
                 android:key="@string/pref_key__view_font_size"
@@ -426,7 +426,7 @@
             android:title="@string/markdown">
 
             <PreferenceCategory android:title="@string/syntax_highlighting">
-                <android.support.v7.preference.SeekBarPreference
+                <androidx.preference.SeekBarPreference
                     android:defaultValue="650"
                     android:icon="@drawable/ic_highlight_black_24dp"
                     android:key="@string/pref_key__markdown__hl_delay_v2"
@@ -472,7 +472,7 @@
                     android:icon="@drawable/ic_list_black_24dp"
                     android:key="@string/pref_key__markdown_table_of_contents_enabled_levels"
                     android:title="@string/table_of_contents" />
-                <android.support.v7.preference.EditTextPreference
+                <androidx.preference.EditTextPreference
                     android:defaultValue="title,tags,date"
                     android:dialogMessage="@string/enter_yaml_front_matter_attributes_to_show"
                     android:icon="@drawable/ic_list_black_24dp"
@@ -509,7 +509,7 @@
                     android:icon="@drawable/ic_reorder_black_24dp"
                     android:key="@string/pref_key__todotxt__reorder_actions"
                     android:title="@string/action_order" />
-                <android.support.v7.preference.EditTextPreference
+                <androidx.preference.EditTextPreference
                     android:defaultValue="+music +video @home @shop"
                     android:icon="@drawable/ic_favorite_black_24dp"
                     android:key="@string/pref_key__todotxt__additional_projects_contexts"
@@ -518,7 +518,7 @@
             </PreferenceCategory>
 
             <PreferenceCategory android:title="@string/syntax_highlighting">
-                <android.support.v7.preference.SeekBarPreference
+                <androidx.preference.SeekBarPreference
                     android:defaultValue="870"
                     android:icon="@drawable/ic_highlight_black_24dp"
                     android:key="@string/pref_key__todotxt__hl_delay"
