--- a/app/src/main/res/layout/document__fragment__edit.xml
+++ b/app/src/main/res/layout/document__fragment__edit.xml
@@ -40,8 +40,7 @@
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingBottom="120dp"
             android:scrollbars="vertical"
-            android:textCursorDrawable="@drawable/cursor_accent"
-            tools:ignore="UnusedAttribute" />
+            android:textCursorDrawable="@drawable/cursor_accent" />
 
     </net.gsantner.markor.ui.DraggableScrollbarScrollView>
 
