--- a/app/src/main/res/layout/more__fragment.xml
+++ b/app/src/main/res/layout/more__fragment.xml
@@ -10,16 +10,10 @@
  *
 #########################################################*/
 -->
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/more__fragment__placeholder_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <FrameLayout
-        android:id="@+id/more__fragment__placeholder_fragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-
-</LinearLayout>
+    android:orientation="vertical"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior" />
