--- a/app/src/main/res/layout/document__fragment__edit.xml
+++ b/app/src/main/res/layout/document__fragment__edit.xml
@@ -39,7 +39,7 @@
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingBottom="120dp"
-            android:scrollbars="vertical"
+            android:scrollbars="none"
             android:textCursorDrawable="@drawable/cursor_accent" />
 
     </net.gsantner.markor.ui.DraggableScrollbarScrollView>
