DateTime format dialog: disable autocorrection, by @gsantner

--- a/app/src/main/res/layout/time_format_dialog.xml
+++ b/app/src/main/res/layout/time_format_dialog.xml
@@ -41,7 +41,7 @@
                 android:layout_toLeftOf="@+id/datetime_format_input_show_spinner"
                 android:hint="@string/enter_or_select_format"
                 android:importantForAutofill="no"
-                android:inputType="textFilter"
+                android:inputType="textFilter|textNoSuggestions"
                 tools:targetApi="o" />
 
             <TextView
