Pre-merge file metadata extractor, utility improvements, WebView fullscreen function, reformat code, by @gsantner #1806 #1200

--- a/app/src/main/res/layout/document__activity.xml
+++ b/app/src/main/res/layout/document__activity.xml
@@ -9,11 +9,12 @@
  *
 #########################################################*/
 -->
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:theme="@style/AppTheme.Unified"
     tools:context="net.gsantner.markor.activity.DocumentActivity">
 
@@ -49,7 +50,6 @@
         android:id="@+id/document__placeholder_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="?attr/actionBarSize"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-</FrameLayout>
+</LinearLayout>
