--- a/app/src/main/res/layout/document__fragment__edit.xml
+++ b/app/src/main/res/layout/document__fragment__edit.xml
@@ -80,4 +80,11 @@
         android:background="@color/background"
         android:visibility="gone" />
 
+    <FrameLayout
+        android:id="@+id/document__fragment_fullscreen_overlay"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/black"
+        android:visibility="gone" />
+
 </FrameLayout>
