View mode - button actions, by @gsantner

--- a/app/src/main/res/layout/document__fragment__edit.xml
+++ b/app/src/main/res/layout/document__fragment__edit.xml
@@ -78,6 +78,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/background"
+        android:layout_marginBottom="@dimen/textactions_bar_height"
         android:visibility="gone" />
 
     <FrameLayout
