--- a/app/src/main/res/values/string-not_translatable.xml
+++ b/app/src/main/res/values/string-not_translatable.xml
@@ -217,6 +217,8 @@ work. If not, see <https://creativecommons.org/publicdomain/zero/1.0/>.
     <string name="tmaid_common_time_insert_timestamp" translatable="false">tmaid_common_time_insert_timestamp</string>
     <string name="tmaid_common_web_jump_to_very_top_or_bottom" translatable="false">tmaid_common_web_jump_to_very_top_or_bottom</string>
     <string name="tmaid_common_web_jump_to_table_of_contents" translatable="false">tmaid_common_web_jump_to_table_of_contents</string>
+    <string name="tmaid_common_view_file_in_other_app" translatable="false">tmaid_common_view_file_in_other_app</string>
+    <string name="tmaid_common_rotate_screen" translatable="false">tmaid_common_rotate_screen</string>
     <string name="tmaid_common_accordion" translatable="false">tmaid_common_accordion</string>
     <string name="tmaid_common_indent" translatable="false">tmaid_common_indent</string>
     <string name="tmaid_common_set_indent_size" translatable="false">tmaid_common_set_indent_size</string>
