View mode: Feature open Image,Video,Audio files and other WebView supported formats in view mode (allow open jpg/mp4/mp3 etc directly in Markor), by @gsantner, closes #1200
fullscreen overlay (video fullscreen playback)

audio, read generic multimedia file metadata like artist,title

view mode button style material-ish

Generic extractFileMetadata --> shareutil

move webchromeclient to net package

optimize/reformat code

--- a/app/src/main/res/menu/document__edit__menu.xml
+++ b/app/src/main/res/menu/document__edit__menu.xml
@@ -164,6 +164,10 @@
                             android:id="@string/action_format_zimwiki"
                             android:icon="@drawable/fountain_pen"
                             android:title="@string/zim_wiki" />
+                        <item
+                            android:id="@string/action_format_embedbinary"
+                            android:icon="@drawable/ic_image_black_24dp"
+                            android:title="@string/embed_binary" />
                     </group>
                 </menu>
             </item>
