--- a/app/src/main/res/menu/document__edit__menu.xml
+++ b/app/src/main/res/menu/document__edit__menu.xml
@@ -101,7 +101,7 @@
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/submenu_toggles"
+        android:id="@+id/submenu_per_file_settings"
         android:icon="@drawable/ic_check_black_24dp"
         android:title="@string/file_settings"
         app:showAsAction="never">
@@ -164,6 +164,10 @@
                             android:id="@string/action_format_zimwiki"
                             android:icon="@drawable/fountain_pen"
                             android:title="@string/zim_wiki" />
+                        <item
+                            android:id="@string/action_format_embedbinary"
+                            android:icon="@drawable/ic_image_black_24dp"
+                            android:title="@string/embed_binary" />
                     </group>
                 </menu>
             </item>
