ShareInto: Replace link text |->/ to not produce tables, remove additional space, placement handling, closes #1791 , by @gsantner

--- a/app/src/main/res/xml/preferences_master.xml
+++ b/app/src/main/res/xml/preferences_master.xml
@@ -161,7 +161,7 @@
                 android:title="@string/disallow_screenshots" />
 
             <androidx.preference.EditTextPreference
-                android:defaultValue="\\n----\\n"
+                android:defaultValue="\\n----\\n{{text}}"
                 android:dialogMessage="@string/share_into_format_prefix_for_text_shared"
                 android:icon="@drawable/ic_share_black_24dp"
                 android:key="@string/pref_key__share_into_format"
