--- a/app/src/main/res/layout/document__fragment__edit.xml
+++ b/app/src/main/res/layout/document__fragment__edit.xml
@@ -31,6 +31,7 @@
             android:id="@+id/document__fragment__edit__highlighting_editor"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:minHeight="@dimen/appbar_padding_top"
             android:background="@color/background"
             android:gravity="top"
             android:imeOptions="flagNoExtractUi"
@@ -38,7 +39,7 @@
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingBottom="120dp"
             android:scrollbars="none"
             android:textCursorDrawable="@drawable/cursor_accent" />
 
