--- a/app/src/main/res/menu/document__edit__menu.xml
+++ b/app/src/main/res/menu/document__edit__menu.xml
@@ -148,10 +148,15 @@
                             android:id="@string/action_format_keyvalue"
                             android:icon="@drawable/ic_file_white_24dp"
                             android:title="@string/key_value" />
+                        <!-- TODO: find and use Asciidoc icon -->
                         <item
                             android:id="@string/action_format_plaintext"
                             android:icon="@drawable/ic_file_white_24dp"
                             android:title="@string/plaintext" />
+                        <item
+                            android:id="@string/action_format_asciidoc"
+                            android:icon="@drawable/ic_file_white_24dp"
+                            android:title="@string/asciidoc" />
                         <item
                             android:id="@string/action_format_markdown"
                             android:icon="@drawable/gs_markdown_black_24dp"
